fixed gruntfile.js and grunt build

--- a/src/index.html
+++ b/src/index.html
@@ -74,10 +74,7 @@
 <!-- bootstrap -->
 <script src="offline/bootstrap.js"></script>
 
-<!-- fooplot -->
-<script src="js/fooplot.js"></script>
-
-<!-- main app -->
-<script src="js/main.js"></script>
+<!-- fooplot and main, will be concat'd -->
+<script src="js/fooplot.js"></script><script src="js/main.js"></script>
 </body>
 </html>
