--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 
 	<!-- custom stylings -->
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head>
 <body>
