added play button

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 			<button id="sample1Btn" class="btn btn-default">Example 1</button>
 			<button id="sample2Btn" class="btn btn-default">Example 2</button>
 		</p>
-		<span class="eqInputSpan spanCenter"><input class="eqInput" id="equationInput" type="text" ></span>
+		<span class="eqInputSpan spanCenter"><input class="eqInput" id="equationInput" type="text" ></span><button id="play" class="btn btn-default">Play!</button>
 	</div>
 
 	<br><br>
