--- a/src/index.html
+++ b/src/index.html
@@ -1,80 +1,20 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>playEquation</title>
+  <head>
+    <meta charset="utf-8">
+    <title>playEquation</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
 
-	<!-- bootstrap -->
-	<link rel="stylesheet" href="offline/bootstrap.css">
-	<link rel="stylesheet" href="offline/bootstrap-theme.css">
+    <!-- mathjax, local copies don't do anything, unfortunately -->
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML"></script>
 
-	<!-- mathjax, local copies don't do anything, unfortunately -->
-	<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML"></script>
+  </head>
+  <body>
+    <!--[if lt IE 10]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-
-	<!-- custom stylings -->
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-
-</head>
-<body>
-<div id="titleDiv" class="container">
-	<h1>playEquation</h1>
-	<p>... and graph it too!</p>
-</div>
-<div class="container space">
-	<div class="row center">
-		<p>
-			Enter equation here and press ENTER
-			<button id="sample1Btn" class="btn btn-default">Example 1</button>
-			<button id="sample2Btn" class="btn btn-default">Example 2</button>
-		</p>
-		<span class="eqInputSpan spanCenter"><input class="eqInput" id="equationInput" type="text" ></span><button id="play" class="btn btn-default">Play!</button>
-	</div>
-
-	<br><br>
-
-	<div class="row center">
-		<p>Pretty Printed equation brought to you by <a href="https://www.mathjax.org/">MathJax.</a></p>
-		<span class="spanCenter"><div id="mathJaxOutput" class="center"></div></span>
-	</div>
-	<br><br>
-	<div class="row center">
-		<span class="spanCenter">Volume: <input id="volSlider" type="range" min="0" max="1" step="0.1" value="0.1" /></span>
-	</div>
-</div>
-
-<br><br>
-
-<!-- plot div -->
-<div class="container space">
-	<div class="row">
-		<div id="myPlot"></div>
-	</div>
-</div>
-
-<div class="container">
-	<div class="row" style="text-align: center;">
-		<h1>How it works</h1>
-
-		<h4>Explanation</h4>
-		<p>Basically, it takes your equation, renders it on the screen, and creates a short sound sample of how the equation sounds.</p>
-
-		<h4>Slightly more Explanation</h4>
-		<p>I use <a href="http://fooplot.com/">fooplot</a> (<a href="https://github.com/dheera/fooplot">GitHub</a>), an open-source home-made graphing utility to plot the graph. It also parses the equation and filters out a lot of possible bogus answers.</p>
-
-		<p>Next, a 2-second plain ole Array filled with sampled data is created manually by plugging in numbers for the 2-second range. This array of length 88200 is rendered by HTML5's Audio Context.</p>
-	</div>
-</div>
-
-
-<!-- jquery -->
-<script src="offline/jquery3.1.1.js"></script>
-
-<!-- bootstrap -->
-<script src="offline/bootstrap.js"></script>
-
-<!-- fooplot and main, will be concat'd -->
-<script src="js/fooplot.js"></script><script src="js/main.js"></script>
-</body>
+    <div id="root"></div>
+  </body>
 </html>
